# MyPortal

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  BC04_IMPLEMENTATION_SUMMARY.md  BC11_IMPLEMENTATION_GUIDE.md  BC12_IMPLEMENTATION_SUMMARY.md  BC13_FINAL_IMPLEMENTATION_SUMMARY.md  BC13_FINAL_SUMMARY.md  BC14_IMPLEMENTATION_SUMMARY.md  BC17_IMPLEMENTATION_SUMMARY.md  BC18_IMPLEMENTATION_SUMMARY.md  BC3_IMPLEMENTATION_SUMMARY.md  BC6_IMPLEMENTATION_SUMMARY.md  BC8_IMPLEMENTATION_SUMMARY.md  BC9_IMPLEMENTATION_SUMMARY.md  BCP_UI_VISUAL_CHANGES.md  CICD_IMPLEMENTATION_SUMMARY.md  Dockerfile  LABOUR_TYPE_RATES_IMPLEMENTATION.md  LABOUR_TYPE_RATES_UI.md  LABOUR_TYPE_RATES_VISUAL.md  README.md  SECURITY.md  SECURITY_SUMMARY.md  WIKI_PUBLISHING_GUIDE.md  XERO_LABOUR_CODE_TRACKING.md  XERO_TEMPLATE_INVESTIGATION.md  change.md  changes.md  docker-compose.yml  full_test_output.txt  manage.py  package-lock.json  package.json  pyproject.toml  test_output.txt  update.sh  version.txt
.github/: SECURITY_SCANNING.md  copilot-instructions.md  dependabot.yml
app/: main.py  mcp_server.py
changes/: .change-log-cache  .json  000a91ae-2e5f-4016-b9bd-4534407a6487.json  000f1344-daca-4f19-bcae-08f7845dd43a.json  00151926-d3d2-44c6-a604-cd356763966c.json  00348a8f-de82-48c0-a4ac-38e8138beaca.json  0042537b-6435-45fb-8d34-c8ccaa9ce797.json  0042939c-3b8c-494d-8959-e14c623d4e50.json  004405e9-5a8a-422d-aea9-5535d7abdbbe.json  005177eb-0632-4ccc-a4c1-32e71f1974e8.json  005d5109-f0bf-4a8d-8731-759e54881dba.json  005eb726-7efc-4ccc-9b16-a376cfd7aa01.json  008e6eb7-a550-4eeb-b3ce-338aa6054780.json  00b10e15-66a4-440e-bdb0-9586cd158379.json  00b2ba8b-dd1d-4c8a-b005-3dd60b152b0e.json  00b626c8-f544-4e66-b2df-324411760549.json  00ba6024-c8d7-4ec7-9039-96004c75ea0f.json  00bf66ce-59bc-47c7-b76f-3d337a825474.json  00c9b330-fadd-425a-8846-43a4dd85adc9.json  00cf77b1-9f38-4d5b-824c-7e7d903f849f.json  00e083f9-6f00-45cb-aec6-ed35bb6b9aa6.json  00e0d136-567d-41d4-bb82-bb121889dcfa.json  00f83b61-c608-4c22-8b59-c68370cee71c.json  00f91f04-7d4c-479b-8d7d-8f9d6a54ef8f.json  010fa5dc-d00e-4245-8d13-115a6270562e.json  011c455e-5251-4003-a593-a2b47cc4e10f.json  012074b2-a885-462f-8696-0f0ff1cb466f.json  0125887d-deb5-4a9d-8f75-7c92ba6ca0b0.json  0128ee85-bdc4-487d-b04c-543924cf2731.json  012eab7b-5c6f-46a5-a4fb-35d2235fd01a.json  0137c6e8-0382-488c-bb37-033c5fbcc789.json  014c6dff-a451-456a-93b3-d327d9562f00.json  015b0526-0827-4fd0-8d32-d6e148915797.json  015c54d1-3473-43ad-9e97-f71b88cef57f.json  01612e91-3fcb-4021-8e4d-9264627825b8.json  017af358-e5bf-4e71-bffa-80160b1e2c21.json  01947f17-a716-4375-8f4a-52cebae5aa12.json  0195b551-a839-48e5-82ae-c13d600b7266.json  01a5a0eb-6fa1-4001-835a-516ccdd6248b.json  01ac263f-f555-46ea-a964-2f40da410e2a.json  (+4797 more)
docs/: BC11_ENTITY_DIAGRAM.md  BC11_IMPLEMENTATION_GUIDE.md  CART_CSP_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MOBILE_UX_GUIDELINES.md  README.md  SECURITY.md  SECURITY_CONFIGURATION.md  SECURITY_SUMMARY.md  SMTP2GO_IMPLEMENTATION_SUMMARY.md  TRANSCRIPTION_SETUP.md  agent.md  api-keys.md  automation-variables.md  bc5_api.md  bookings.md  cal-com-prd.md  cicd-pipeline.md  cicd-quickstart.md  companies-api.md  configuration.md  create-ticket-examples.md  dashboard.md  dashboard_cards.md  design.md  design_audit.md  design_audit_scan.py  email-tracking.md  feature_pack_pr_backlog.md  feature_packs.md  imap.md  issues-api.md  knowledge-base-conditional-logic.md  logging-and-audit.md  m365-enterprise-app-bootstrap.md  m365-pkce-app-setup.md  matrix-integration.md  mcp.md  node-parity-gap.md  opnform.md  (+17 more)
migrations/: 001_init.sql  002_user_companies.sql  003_staff.sql  004_add_can_manage_staff.sql  005_api_keys.sql  006_staff_licenses.sql  007_add_asset_invoice_permissions.sql  008_assets.sql  009_invoices.sql  010_external_api_settings.sql  011_add_company_admin.sql  011_asset_details.sql  012_apps.sql  013_shop.sql  014_add_sku_to_shop_products.sql  015_add_vendor_sku_and_image_url.sql  016_add_order_number.sql  017_add_vip_flag_and_vip_price.sql  018_add_archived_to_shop_products.sql  019_product_exclusions.sql  020_shop_categories.sql  021_add_shop_order_webhook.sql  021_add_status_notes_po_number.sql  022_add_syncro_xero_ids.sql  023_forms.sql  024_form_permissions_company_id.sql  025_office_groups.sql  026_audit_logs.sql  (+336 more)
(+1591 files in other folders)
