[project]
name = "myportal"
version = "0.1.0"
description = "Python implementation of the MyPortal backend"
authors = [{name = "MyPortal Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "aiomysql",
    "pydantic>=2.6",
    "pydantic-settings",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-dotenv",
    "redis",
    "aiofiles",
    "jinja2",
    "itsdangerous",
    "pyotp",
    "apscheduler",
    "croniter>=1.4",
    "httpx",
    "loguru",
    "cryptography",
    "email-validator",
    "python-multipart",
    "bleach",
    "mutagen",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
